# exp-som-comparison-audio

./: ChangeLog.md  README.md  notes  results.csv  results2.csv  run-noise.sh  run.sh  som-comparison.cabal
src/: Pattern.hs  SOSMain.hs  Util.hs
